Implement question handling with dummy data

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.answers.highlight-true .correct-true {
+  background: green;
+}
